# passengerResourceManagementRust

./: .gitignore  AGENTS.md  CHEATSHEET.md  Caddyfile  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  deny.toml  dev.env.example  docker-compose.env.example  docker-compose.loadtest.yml  docker-compose.yml  railway.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: api-examples.md  code-review-qa.md  k6-load-report.md  observability.md  openapi-client-evidence-2026-05-18.md  persistence-matrix.md  plan-passengerResourceManagement.prompt.md  postgres-migration-plan.md  production-plan.md  review-readiness-checklist.md  reviewer-flow-evidence-2026-05-18.md  security-hardening-evidence-2026-05-18.md  security-review.md  web-reviewer-flow.md
k6/: passenger_load.js
migrations/: 001_initial.sql
scripts/: k6_load_test.sh  postgres-smoke.sh
specs/: 00-glossary.md  01-tier-policy.md  02-crew-lead.md  03-passenger.md  04-resource.md  05-access.md  06-audit.md  07-reporting.md
src/: lib.rs
src/application/: access_service.rs  crew_lead_service.rs  guards.rs  mod.rs  passenger_service.rs  ports.rs  reporting_service.rs  resource_service.rs
src/domain/: actor.rs  admin_event.rs  crew_lead.rs  errors.rs  mod.rs  passenger.rs  resource.rs  tier.rs  timestamp.rs  usage_event.rs
src/infrastructure/: fake_clock.rs  in_memory_admin_event_sink.rs  in_memory_usage_event_sink.rs  mod.rs  pg_store.rs  sqlite_event_store.rs  system_clock.rs
src/interface/: composition_root.rs  dto.rs  http.rs  mod.rs
tests/: access.rs  audit.rs  crew_lead.rs  http.rs  http_access.rs  http_admin.rs  http_crew_leads.rs  http_health.rs  http_new_features.rs  http_passengers.rs  http_reports.rs  http_resources.rs  http_sqlite.rs  lifecycle.rs  passenger.rs  reporting.rs  resource.rs  sqlite_persistence.rs
tests/http_common/: mod.rs
web/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: prms.spec.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/components/: AccessPanel.tsx  AppShell.tsx  AuditLogPanel.tsx  CrewLeadsPanel.tsx  LiveServerPanel.tsx  LoginPage.tsx  PassengersPanel.tsx  ReportsPanel.tsx  ResourcesPanel.tsx  TierMatrix.tsx  TierTag.tsx
web/src/contexts/: AuthContext.tsx  DataContext.tsx
web/src/domain/: actor.ts  errors.ts  ids.ts  tier.ts  types.ts
web/src/domain/__tests__/: tier.test.ts
web/src/hooks/: useHash.ts
web/src/pages/: AccessPage.tsx  AuditPage.tsx  CrewLeadsPage.tsx  DashboardPage.tsx  PassengersPage.tsx  ReportsPage.tsx  ResourcesPage.tsx
web/src/services/: accessService.ts  api.ts  clock.ts  crewLeadService.ts  guards.ts  openapi.generated.ts  passengerService.ts  reportingService.ts  resourceService.ts  world.ts
web/src/services/__tests__/: api.test.ts  world.test.ts
web/src/state/: store.tsx  storeContext.ts  useStore.ts
