[package]
name = "passenger_resource_management"
version = "1.0.0"
edition = "2024"
description = "Spaceship X26 Passenger Resource Management System"
license = "MIT"
publish = false

[features]
default = []
# Optional HTTP adapter. Pulls in axum/tokio/serde and enables the
# `serve` binary. The core library and tests do not depend on this.
http = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:serde", "dep:serde_json", "dep:tracing", "dep:tracing-subscriber", "dep:clap", "dep:utoipa"]

[dependencies]
thiserror = "2"
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
utoipa = { version = "5", features = ["axum_extras"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"
required-features = ["http"]
