[package]
name = "passenger_resource_management"
version = "1.0.0"
edition = "2024"
description = "Spaceship X26 Passenger Resource Management System"
license = "MIT"
publish = false

[features]
default = []
# Optional HTTP adapter. Pulls in axum/tokio/serde and enables the
# `serve` binary. The core library and tests do not depend on this.
http = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:serde", "dep:serde_json", "dep:tracing", "dep:tracing-subscriber", "dep:clap", "dep:utoipa", "dep:rusqlite", "dep:tower_governor", "dep:subtle", "dep:sha2", "dep:hex"]
# Optional PostgreSQL backend. Adds sqlx + the PgEntityStore adapter.
# Requires PRMS_PG_URL to be set at runtime; compile-time DB not needed
# because we use `sqlx::query()` (no `query!` macros).
postgres = ["http", "dep:sqlx"]

[dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"], optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "set-header", "util"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
utoipa = { version = "5", features = ["axum_extras"], optional = true }
# SQLite adapter — `bundled` compiles the SQLite amalgamation from source,
# eliminating the system-SQLite dependency. Part of the `http` feature
# so the domain/application layers stay I/O-free.
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower_governor = { version = "0.8.0", features = ["axum"], optional = true }
# Constant-time byte comparison for bearer token validation (OWASP A07).
# `no_std` compatible, zero dependencies, trivially auditable.
subtle = { version = "2", optional = true }
# PostgreSQL adapter — async, connection-pool-based. `tls-rustls` is pure Rust
# (no system-OpenSSL dep), required even when the server uses plain TCP because
# sqlx links the rustls crate regardless of whether TLS is negotiated.
# FIX: disable sqlx defaults so the Postgres adapter does not pull in
# sqlx-sqlite, which conflicts with rusqlite's libsqlite3-sys link dependency.
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls"], optional = true }
# SHA-256 hashing for the tamper-evident audit log hash chain.
sha2 = { version = "0.10", optional = true }
# Hex encoding for SHA-256 digests stored/compared as strings.
hex = { version = "0.4", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"
required-features = ["http"]
